# rules_cdk_example

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  devbox.json  go.mod  package.json  pnpm-lock.yaml
cdk/hello-app/: BUILD.bazel  app.js
go/hello-app/: BUILD.bazel  main.go
go/hello-app-docker/: BUILD.bazel  main.go
java/hello-app/: BUILD.bazel
java/hello-app/src/main/java/hello/: Handler.java
